# haiku.skills

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  test.yml
ag-ui/: index.html
changelog/: index.html
cli/: index.html
custom-dependencies/: index.html
development/: index.html
docs/: ag-ui.md  cli.md  custom-dependencies.md  development.md  example-skills.md  examples.md  index.md  installation.md  lifespan.md  quickstart.md  signing.md  skill-sources.md  skills.md  tutorial.md
example-skills/: index.html
examples/: index.html
examples/brave-search/scripts/: brave_web_search.py
examples/code-execution/: SKILL.md
examples/image-generation/: SKILL.md
examples/image-generation/scripts/: generate_image.py
examples/rag/: SKILL.md
examples/rag/scripts/: ask_question.py  search_documents.py
haiku/skills/: __init__.py  agent.py  capability.py  cli.py  discovery.py  mcp.py  models.py  orchestrator.py  parser.py  prompts.py  registry.py  script_tools.py  signing.py  state.py  tasks.py
haiku/skills/chat/: __init__.py  app.py
haiku/skills/chat/widgets/: chat_history.py
installation/: index.html
lifespan/: index.html
quickstart/: index.html
scripts/: bump_version.py
search/: search_index.json
signing/: index.html
skill-sources/: index.html
skills/: index.html
skills/brave-search/: pyproject.toml
skills/brave-search/haiku_skills_brave_search/: SKILL.md  __init__.py
skills/code-execution/: README.md  pyproject.toml
skills/code-execution/haiku_skills_code_execution/: SKILL.md  __init__.py  sandbox.py
skills/code-execution/haiku_skills_code_execution/code-execution/: SKILL.md
skills/code-execution/haiku_skills_code_execution/codeexecution/: SKILL.md  SKILL.sigstore
skills/code-execution/haiku_skills_code_execution/codeexecution/scripts/: run_code.py
skills/code-execution/haiku_skills_code_execution/scripts/: run_code.py
skills/email/: README.md  pyproject.toml
skills/email/haiku_skills_email/email/: SKILL.md
skills/gmail/: README.md  pyproject.toml
skills/gmail/haiku_skills_gmail/: SKILL.md  __init__.py  _auth.py  _create_draft.py  _helpers.py  _list_drafts.py  _list_labels.py  _modify_labels.py  _read_email.py  _reply_to_email.py  _search_emails.py  _send_email.py
skills/gmail/haiku_skills_gmail/gmail/: SKILL.md  SKILL.sigstore
skills/gmail/haiku_skills_gmail/gmail/scripts/: create_draft.py  list_drafts.py  list_labels.py  modify_labels.py  read_email.py  reply_to_email.py  search_emails.py  send_email.py
skills/graphiti-memory/: README.md  pyproject.toml
skills/graphiti-memory/haiku_skills_graphiti_memory/: __init__.py
skills/graphiti-memory/haiku_skills_graphiti_memory/graphiti-memory/: SKILL.md
skills/image-generation/: README.md  pyproject.toml
skills/image-generation/haiku_skills_image_generation/: SKILL.md  __init__.py  _generate_image.py
skills/image-generation/haiku_skills_image_generation/imagegeneration/: SKILL.md  SKILL.sigstore
skills/image-generation/haiku_skills_image_generation/imagegeneration/scripts/: generate_image.py
skills/image-generation/haiku_skills_image_generation/scripts/: generate_image.py
skills/notifications/: README.md  pyproject.toml
skills/notifications/haiku_skills_notifications/: __init__.py  _read_notifications.py  _send_notification.py
skills/notifications/haiku_skills_notifications/notifications/: SKILL.md  SKILL.sigstore
skills/notifications/haiku_skills_notifications/notifications/scripts/: read_notifications.py  send_notification.py
skills/notifications/haiku_skills_notifications/scripts/: ntfy.py  read_notifications.py  send_notification.py
skills/rag/: pyproject.toml
skills/rag/haiku_skills_rag/: SKILL.md  __init__.py
skills/sandbox/: README.md  pyproject.toml
skills/sandbox/haiku_skills_sandbox/: Dockerfile  SKILL.md  __init__.py
skills/web/: README.md  pyproject.toml
skills/web/haiku_skills_web/: SKILL.md  __init__.py  _fetch_page.py  _search.py
skills/web/haiku_skills_web/scripts/: fetch_page.py  search.py
skills/web/haiku_skills_web/web/: SKILL.md  SKILL.sigstore
skills/web/haiku_skills_web/web/scripts/: fetch_page.py  search.py
tests/: conftest.py  test_agent.py  test_bump_version.py  test_capability.py  test_discovery.py  test_integration.py  test_lifespan.py  test_mcp.py  test_models.py  test_orchestrator.py  test_parser.py  test_registry.py  test_script_tools.py  test_signing.py  test_skills.py  test_skills_rag.py  test_state.py  test_tasks.py  test_validate.py
tests/cassettes/test_integration/: test_multi_skill_decomposition.yaml  test_single_skill_summarize.yaml  test_skill_with_tool.yaml
tests/cassettes/test_skills/: TestBraveSearch.test_web_search.yaml  TestImageGeneration.test_generate_image_tool_with_state.yaml
tests/cassettes/test_skills_rag/: TestRAG.test_analyze_with_state.yaml  TestRAG.test_ask.yaml  TestRAG.test_search.yaml
tests/fixtures/: mcp_server.py
tests/fixtures/greeting-maker-entrypoint/: SKILL.md
tests/fixtures/greeting-maker-entrypoint/scripts/: render.py
tests/fixtures/greeting-maker-filesystem/: SKILL.md
tests/fixtures/greeting-maker-filesystem/scripts/: lookup.py
tests/fixtures/greeting-maker-filesystem/templates/: greeting.txt
tests/fixtures/simple-skill/: SKILL.md
tests/fixtures/simple-skill/scripts/: greet.py
tests/fixtures/skill-with-refs/: SKILL.md
tests/fixtures/skill-with-refs/assets/: template.txt
tests/fixtures/skill-with-refs/references/: REFERENCE.md
tests/fixtures/summarizer/: SKILL.md
tests/fixtures/translator/: SKILL.md
tests/fixtures/versioned-skill/: SKILL.md
tests/integration/: conftest.py  test_greeting_maker.py  test_multi_skill.py
tests/integration/cassettes/test_greeting_maker/: test_entrypoint_direct.yaml  test_entrypoint_subagent.yaml  (+2 more)
tests/skills/: conftest.py  test_code_execution.py  test_gmail.py  test_image_generation.py  test_notifications.py  test_sandbox.py  test_web.py
tutorial/: index.html
(+18 files in other folders)
