[project]

name = "haiku.skills"
description = "Skill-powered AI agents implementing the Agent Skills specification with pydantic-ai"
version = "0.1.0"
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
keywords = [
    "agent-skills",
    "pydantic-ai",
    "mcp",
    "ai-agents",
    "task-decomposition",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai-slim[mcp]>=1.46.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
tui = [
    "pydantic-ai-slim[logfire]>=1.46.0",
    "textual>=3.2.0",
    "textual-image>=0.8.5",
    "typer>=0.19.2,<0.20.0",
    "python-dotenv>=1.1.0",
]
[project.urls]
Homepage = "https://github.com/ggozad/haiku.skills"
Repository = "https://github.com/ggozad/haiku.skills"
Issues = "https://github.com/ggozad/haiku.skills/issues"

[project.scripts]
haiku-skills = "haiku.skills.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/tests", "/.github"]

[tool.hatch.build.targets.wheel]
packages = ["haiku"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.14",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-recording>=0.13.4",
    "pydantic-ai-slim[openai,logfire]>=1.46.0",
    "ruff>=0.14.13",
    "pydantic-monty>=0.0.4",
    "textual>=7.5.0",
    "textual-image>=0.8.5",
    "typer>=0.19.2,<0.20.0",
    "python-dotenv>=1.2.1",
    "haiku-skills-web",
    "haiku-skills-image-generation",
    "haiku-skills-code-execution",
    "haiku-skills-rag",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401", "F403"] }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["haiku"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
haiku-skills-web = { workspace = true }
haiku-skills-image-generation = { workspace = true }
haiku-skills-code-execution = { workspace = true }
haiku-skills-rag = { workspace = true }

[tool.uv.workspace]
members = ["skills/*"]

[tool.ty.environment]
python-version = "3.13"
python = ".venv"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", ".venv"]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = [
    "haiku/skills",
    "skills/web/haiku_skills_web",
    "skills/image-generation/haiku_skills_image_generation",
    "skills/code-execution/haiku_skills_code_execution",
    "skills/rag/haiku_skills_rag",
]
omit = ["haiku/skills/chat/*", "haiku/skills/cli.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
