[project]

name = "haiku.skills"
description = "Skill-powered AI agents implementing the Agent Skills specification with pydantic-ai"
version = "0.5.1"
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
keywords = [
    "agent-skills",
    "pydantic-ai",
    "mcp",
    "ai-agents",
    "ai-tools",
    "sub-agent",
    "skill-discovery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.5",
    "pydantic-ai-slim[mcp]>=1.63.0",
    "pyyaml>=6.0.3",
    "skills-ref>=0.1.1",
]

[project.optional-dependencies]
ag-ui = [
    "ag-ui-protocol>=0.1.13",
    "jsonpatch>=1.33",
]
tui = [
    "pydantic-ai-slim[logfire]>=1.63.0",
    "ag-ui-protocol>=0.1.13",
    "jsonpatch>=1.33",
    "textual>=8.0.0",
    "typer>=0.24.1",
    "python-dotenv>=1.2.1",
]
[project.urls]
Homepage = "https://github.com/ggozad/haiku.skills"
Repository = "https://github.com/ggozad/haiku.skills"
Issues = "https://github.com/ggozad/haiku.skills/issues"

[project.scripts]
haiku-skills = "haiku.skills.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["/tests", "/.github", "/docs"]

[tool.hatch.build.targets.wheel]
packages = ["haiku"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ty>=0.0.18",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-recording>=0.13.4",
    "pydantic-ai-slim[openai,logfire]>=1.63.0",
    "ruff>=0.15.2",
    "pydantic-monty>=0.0.7",
    "textual>=8.0.0",
    "typer>=0.24.1",
    "python-dotenv>=1.2.1",
    "haiku-skills-web",
    "haiku-skills-image-generation",
    "haiku-skills-code-execution",
    "haiku-skills-graphiti-memory",
    "ag-ui-protocol>=0.1.13",
    "jsonpatch>=1.33",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.7.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "I"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401", "F403"] }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["haiku"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
haiku-skills-web = { workspace = true }
haiku-skills-image-generation = { workspace = true }
haiku-skills-code-execution = { workspace = true }
haiku-skills-graphiti-memory = { workspace = true }


[tool.uv.workspace]
members = ["skills/*"]

[tool.ty.environment]
python-version = "3.13"
python = ".venv"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = [".git", ".venv"]
filterwarnings = ["error", "ignore::UserWarning", "ignore::DeprecationWarning"]

[tool.coverage.run]
source = [
    "haiku/skills",
    "skills/web/haiku_skills_web",
    "skills/image-generation/haiku_skills_image_generation",
    "skills/code-execution/haiku_skills_code_execution",
    "skills/graphiti-memory/haiku_skills_graphiti_memory",
]
omit = ["haiku/skills/chat/*", "haiku/skills/cli.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
