[project]
name = "haiku-skills-image-generation"
version = "0.1.0"
description = "Image generation skill for haiku.skills"
requires-python = ">=3.13"
dependencies = ["haiku.skills>=0.1.0"]

[project.entry-points."haiku.skills"]
image-generation = "haiku_skills_image_generation:create_skill"

[tool.uv.sources]
haiku-skills = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
