[project]
name = "haiku-skills-notifications"
version = "0.13.1"
description = "Push notifications skill for haiku.skills using ntfy.sh"
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
keywords = ["haiku-skills", "agent-skills", "pydantic-ai", "ntfy", "notifications"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = ["haiku.skills>=0.13.1", "httpx>=0.28.0"]

[project.urls]
Homepage = "https://github.com/ggozad/haiku.skills"
Repository = "https://github.com/ggozad/haiku.skills"
Issues = "https://github.com/ggozad/haiku.skills/issues"

[project.entry-points."haiku.skills"]
notifications = "haiku_skills_notifications:create_skill"

[tool.uv.sources]
haiku-skills = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
