[project]
name = "haiku-skills-web"
version = "0.7.4"
description = "Web search and page fetching skill for haiku.skills"
authors = [{ name = "Yiorgis Gozadinos", email = "ggozadinos@gmail.com" }]
license = { text = "MIT" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
keywords = ["haiku-skills", "agent-skills", "pydantic-ai", "web-search", "brave-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["haiku.skills>=0.7.4", "trafilatura>=2.0.0", "httpx>=0.28.0"]

[project.urls]
Homepage = "https://github.com/ggozad/haiku.skills"
Repository = "https://github.com/ggozad/haiku.skills"
Issues = "https://github.com/ggozad/haiku.skills/issues"

[project.entry-points."haiku.skills"]
web = "haiku_skills_web:create_skill"

[tool.uv.sources]
haiku-skills = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
